--- a/src/main/java/umg/RegistroCliente.form
+++ b/src/main/java/umg/RegistroCliente.form
@@ -180,6 +180,14 @@
           <text value="Registro de Clientes"/>
         </properties>
       </component>
+      <component id="7e4a6" class="javax.swing.JLabel" binding="Fecha">
+        <constraints>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value=""/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
