--- a/src/main/java/umg/AperturaDeCuenta.form
+++ b/src/main/java/umg/AperturaDeCuenta.form
@@ -125,13 +125,15 @@
           <text value="Confirmar"/>
         </properties>
       </component>
-      <component id="1d5be" class="javax.swing.JTextField" binding="textField2" default-binding="true">
+      <component id="1d5be" class="javax.swing.JTextField" binding="giTextField" default-binding="true">
         <constraints>
           <grid row="7" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <text value=""/>
+        </properties>
       </component>
       <component id="b8e5e" class="javax.swing.JLabel">
         <constraints>
