--- a/src/main/java/umg/MenuPrincipal.form
+++ b/src/main/java/umg/MenuPrincipal.form
@@ -123,6 +123,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Apertura de Cuenta"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton3ActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="jButton4">
           <Properties>
